setup contact form

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
    <li><%=link_to ('Home'),{:controller =>'pages', :action => 'Home'} %> </li>
    <li><%=link_to ('Research'),{:controller =>'pages', :action => 'Research'} %> </li>
   <li> <%=link_to ('Thesis'),{:controller =>'pages', :action => 'Thesis'} %> </li>
+ <li> <%=link_to ('Contact'),{:controller =>'contacts', :action => 'Contact'} %> </li>
   
   </ul>
   <header>
